@@ -1,4 +1,4 @@
-/* $Id: form.c,v 1.18 2002/11/06 03:27:04 ukai Exp $ */
+/* $Id: form.c,v 1.19 2002/11/08 16:07:06 ukai Exp $ */
 /* 
  * HTML forms
  */
@@ -484,11 +484,11 @@ input_textarea(FormItemList *fi)
     fmInit();
 
     if (fi->readonly)
-	return;
+	goto input_end;
     f = fopen(tmpf, "r");
     if (f == NULL) {
 	disp_err_message("Can't open temporary file", FALSE);
-	return;
+	goto input_end;
     }
     fi->value = Strnew();
     while (tmp = Strfgets(f), tmp->length > 0) {
@@ -508,6 +508,7 @@ input_textarea(FormItemList *fi)
 	Strcat(fi->value, tmp);
     }
     fclose(f);
+  input_end:
     unlink(tmpf);
 }
 
